--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.5.7",
     "express": "~4.15.5",
     "express-validator": "^5.0.0",
+    "fs": "0.0.1-security",
     "mongoose": "^5.0.6",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
